grid-mediaqueries-Ok

--- a/html/exo_positionnement/grid/franck/gridf.html
+++ b/html/exo_positionnement/grid/franck/gridf.html
@@ -23,16 +23,16 @@
  
 
     <main class="main"><!-- Contenu principal de la page  -->
-        <article class="box">
+        <article class="article box">
             Article 1
             </article>
-            <article class="box">
+            <article class="article box">
             Article 2
             </article>
-            <article class="box">
+            <article class="article box">
             Article 3
             </article>
-            <article class="box">
+            <article class="article box">
             Article 4
             </article>
             
