--- a/JavaScriptFranck/nombrelettre/index.html
+++ b/JavaScriptFranck/nombrelettre/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <title>Page d accueil</title>
     <link rel="stylesheet" href="css\style.css">
+    <script src="sript.js" async></script>
 
 </head>
 
