--- a/JavaScript/JavaScriptFranck/Evaluation/InscriptionAstro.html
+++ b/JavaScript/JavaScriptFranck/Evaluation/InscriptionAstro.html
@@ -24,11 +24,11 @@
             <input type="text" id="UserFirstName" name="UserFirstName" required><br>
 
 
-            <label  for="dob">Date de naissance:</label>
+            <label  for="dob">Date de naissance:</label><br>
            <select name="jour" id="jour" ></select>
            <select name="mois" id="mois" ></select>
-           <select name="annee" id="annee"></select>
-            <label for="Pseudo">Peudo :</label>    
+           <select name="annee" id="annee"></select><br><br>  
+            <label for="Pseudo">Peudo :</label>  
             <input type="text" id="Pseudo" name="Pseudo" readonly><br>
 
             <label for="Valider">Valider :</label>    
