--- a/JavaScript/JavaScriptMika/codePostal/index.html
+++ b/JavaScript/JavaScriptMika/codePostal/index.html
@@ -5,12 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Codes postaux</title>
-    <script src="script.js" defer></script>
-    
+    <script src="script.js" type="module"></script>
 </head>
 <body>
-    <h1>Code posteaux</h1>
-    <input type="search" id="search">
-
+    <h1>Codes postaux</h1>
+    <label for="toto">Rechercher</label>
+    <input type="search" id="toto" value="59690"> 
+    <button type="button" id="btnValid"><strong>Valider</strong></button>
 </body>
 </html>
