--- a/JavaScript/JavaScriptFranck/Evaluation/InscriptionAstro.html
+++ b/JavaScript/JavaScriptFranck/Evaluation/InscriptionAstro.html
@@ -17,7 +17,7 @@
 
             <fieldset><legend>Inscription Compte</legend> 
             <label for="UserLastName">Nom utilisateur :</label>    
-            <input type="text" id="UserLastName" name="UserFirstName" required><br>
+            <input type="text" id="UserLastName" name="UserLastName" required><br>
 
 
             <label for="UserFirstName">Prenom utilisateur :</label>    
@@ -32,8 +32,11 @@
             <input type="text" id="Pseudo" name="Pseudo" readonly><br>
 
             <label for="Valider">Valider :</label>    
-            <input type="button" id="Valider" name="Valider" value="valider" disabled   >
-
+            <input type="button" id="Valider" name="Valider" value="valider" disabled="true"   > 
+            <br><br>
+            
+            <label for="Reset"> Reset</label>
+            <input type="button" id="Reset" name="Reset" value="Reset" >
 </fieldset>
             
         </form>
